syntax = "proto3";

package sniper;

import "google/protobuf/any.proto";
import "api/protos/meta.proto";

////////////////////////////////////////////////////////////////////////////////
//
// Sniper Interface
//
////////////////////////////////////////////////////////////////////////////////
service SniperService {
  //  ps
  rpc Create(TensorMessage) returns (VoidMessage);
  rpc Freeze(TensorMessage) returns (VoidMessage);
  rpc FeedSample(TensorMessage) returns (VoidMessage);
  rpc Push(TensorMessage) returns (VoidMessage);
  rpc Pull(TensorMessage) returns (TensorMessage);
  rpc EmbeddingLookup(TensorMessage) returns (TensorMessage);
  rpc PushGrad(TensorMessage) returns (VoidMessage);
  rpc Save(TensorMessage) returns (VoidMessage);
  rpc Restore(TensorMessage) returns (VoidMessage);
  rpc Complete(TensorMessage) returns (VoidMessage);

  //  hub
  rpc StartSample(TensorMessage) returns (VoidMessage);
  rpc ReadSample(TensorMessage) returns (TensorMessage);
  rpc UpdateHubShard(TensorMessage) returns (VoidMessage);

  //  scheduler
  rpc Heartbeat(TensorMessage) returns (VoidMessage);
}
